Renamed the main mixin to viewportS.  It sounds better.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "viewport.scss",
+  "name": "viewports.scss",
   "version": "0.1.0",
   "description": "A simple @media query generator for SASS/Compass",
   "scripts": {
