Updated the test runner to run the suite against both ruby-sass and node-sass.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "author": "Jarno Rantanen <jarno@jrw.fi>",
     "license": "MIT",
     "dependencies": {
-        "mocha": "~1.8.2"
+        "mocha": "1.8.2",
+        "node-sass": "0.8.3"
     }
 }
