Mark "mocha" and "node-sass" devDependencies.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "author": "Jarno Rantanen <jarno@jrw.fi>",
     "license": "MIT",
-    "dependencies": {
+    "devDependencies": {
         "mocha": "1.8.2",
         "node-sass": "0.8.3"
     }
